--- a/ShowBoatMotors/style /style.css
+++ b/ShowBoatMotors/style /style.css
@@ -1,5 +1,3 @@
 h1  {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: chocolate;
-    text-align: center;
+color: blueviolet;
 }
