--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1  {
-    color: blueviolet;
+    color: black;
     text-align: center;
 }
 
@@ -20,4 +20,12 @@ h1  {
     bottom: 0;
     width: 100%;
     text-align: center;
+}
+
+body    {
+    background-color: dimgrey;
+}
+
+p {
+    color: black;
 }
